# snowboard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md
.github/: FUNDING.YML
.github/workflows/: rust.yml
.zed/: settings.json
benches/perf-test/: .gitignore  Cargo.toml  clean  results-latest.txt  run  setup
benches/perf-test/src/: main.rs
examples/: WS-README.md  basic.rs  basic2.rs  data_passing.rs  manual_accept.rs  reslike.rs  routing.rs  single_thread.rs  ws.rs
examples/async/: Cargo.toml
examples/async/src/: main.rs
examples/json/: Cargo.toml
examples/json/src/: main.rs
examples/perf-test/: .gitignore  Cargo.toml
examples/tls/: Cargo.toml  README.md
examples/tls/src/: main.rs
examples/websocket/: Cargo.toml  README.md
examples/websocket/src/: main.rs
src/: lib.rs  macros.rs  request.rs  server.rs  util.rs  ws.rs
src/response/: mod.rs  response_types.rs  responselike.rs
tests/: parsers.rs
