[package]
name = "snowboard"
version = "1.0.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/ibnz36/snowboard"
readme = "README.md"
description = "Extremely simple rust servers 🏂"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE"]
homepage = "https://github.com/ibnz36/snowboard"
documentation = "https://docs.rs/snowboard"
keywords = ["http", "server", "web"]
categories = ["network-programming", "web-programming::http-server", "parsing", "web-programming"]

[dependencies]
smol = "2.0.2"
serde_json = { version = "1.0.149", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
base64 = { version = "0.22.1", optional =  true }
sha1 =  { version = "0.11.0", optional = true }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
async-native-tls = { version = "0.6.0", optional = true }
async-tungstenite = { version = "0.34.0", optional = true }

[features]
default = []
all = ["tls", "json", "websocket"]
tls = ["async-native-tls"]
json = ["serde_json", "serde"]
websocket = ["async-tungstenite", "base64", "sha1"]

[dev-dependencies]
smol = "2.0.2"
smol-potat = "1.1.2"
criterion = "0.5.1"

[lib]
doctest = false
required-features = []

[[bench]]
name = "main"
harness = false

[[test]]
name = "main"
