[package]
name = "snowboard"
version = "0.9.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ibnz36/snowboard"
readme = "README.md"
description = "fast, simple & reliable http servers 🏂"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE"]
homepage = "https://github.com/ibnz36/snowboard"
documentation = "https://docs.rs/snowboard"
keywords = ["http", "server", "web"]
categories = ["network-programming", "web-programming::http-server", "parsing", "web-programming"]

[dependencies]
serde_json = { version = "1.0.149", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
base64 = { version = "0.22.1", optional =  true }
sha1 =  { version = "0.11.0", optional = true }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
async-native-tls = { version = "0.6.0", optional = true }
async-tungstenite = { version = "0.34.0", optional = true, features = ["tokio-runtime"], default-features = false }
tokio = { version = "1.51.0", features = ["rt", "rt-multi-thread", "io-util", "net"] }
tokio-stream = { version = "0.1.18", features = ["net"] }

[dev-dependencies]
criterion = "0.5.1"
smol-potat = "1.1.2"

[features]
default = []
all = ["tls", "json", "websocket"]
tls = ["async-native-tls"]
json = ["serde_json", "serde"]
websocket = ["async-tungstenite", "base64", "sha1"]

[lib]
doctest = false
required-features = []

[[bench]]
name = "main"
harness = false

[[test]]
name = "main"
