[package]
name = "snowboard"
version = "0.10.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ibnz36/snowboard"
readme = "README.md"
description = "fast, simple & reliable http servers 🏂"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE"]
homepage = "https://github.com/ibnz36/snowboard"
documentation = "https://docs.rs/snowboard"
keywords = ["http", "server", "web"]
categories = [
	"network-programming",
	"web-programming::http-server",
	"parsing",
	"web-programming",
]

[dependencies]
serde_json = { version = "1.0.149", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
base64 = { version = "0.22.1", optional = true }
sha1 = { version = "0.11.0", optional = true }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
tokio-native-tls = { version = "0.3.1", optional = true }
tokio-tungstenite = { version = "0.29", optional = true }
tokio = { version = "1.51.0", features = [
	"rt",
	"rt-multi-thread",
	"io-util",
	"net",
] }
tokio-stream = { version = "0.1.18", features = ["net"] }
futures-util = { version = "0.3", features = ["sink"] }

[dev-dependencies]
criterion = "0.5.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = []
all = ["tls", "json", "websocket"]
tls = ["tokio-native-tls"]
json = ["serde_json", "serde"]
websocket = ["tokio-tungstenite", "base64", "sha1"]

[lib]
doctest = false
required-features = []

[[bench]]
name = "main"
harness = false

[[test]]
name = "main"
path = "./test/main.rs"
